src/objects/Account_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>DM_A_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM A External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <label>End Customer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_1_formula__c</fullName>
        <formula>Partner_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 1 (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Fax__c</fullName>
        <formula>Partner_2__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2 Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Phone__c</fullName>
        <formula>Partner_2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Sales_Cred_Num__c</fullName>
        <formula>Partner_2__r.Sales_Credit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2 Sales Credit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Shipping_Country__c</fullName>
        <formula>Text(Partner_2__r.ShippingCountryCode)</formula>
        <label>Partner 2 Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Shipping_Postal_Code__c</fullName>
        <formula>Partner_2__r.ShippingPostalCode</formula>
        <label>Partner 2 Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Shipping_State__c</fullName>
        <formula>Text(Partner_2__r.ShippingStateCode)</formula>
        <label>Partner 2 Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Shipping_Street__c</fullName>
        <formula>Partner_2__r.ShippingStreet</formula>
        <label>Partner 2 Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Tax_Code__c</fullName>
        <formula>Partner_2__r.Tax_Identifier__c</formula>
        <label>Partner 2 Tax Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Warehouse_Order_Code__c</fullName>
        <formula>Text(Partner_2__r.Warehouse_Order_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2 Warehouse Order Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_2_city__c</fullName>
        <formula>Partner_2__r.ShippingCity</formula>
        <label>Partner 2 city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_email__c</fullName>
        <formula>Partner_2__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_formula__c</fullName>
        <formula>Partner_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2(formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Role__c</fullName>
        <formula>CASE(Role__c,
&quot;is a distributor for&quot;, &quot;is a customer of&quot;,
&quot;is a billing vendor for&quot;, &quot;is a customer of&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reverse Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>is a distributor for</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is a customer of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is a billing vendor for</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <formula>Partner_2__r.Ship_To_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <label>Account Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_1__c</columns>
        <columns>Role__c</columns>
        <columns>Partner_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Expiration_Manager_Queue_Account_Relationship</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Expiration Manager Queue</label>
        <queue>Contract_Expiration_Manager_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AR-ID-{00000}</displayFormat>
        <label>AR-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>